--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <div id="human-choice" class="human answer hide">Ты выбрал камень</div>
       </div>
     </div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
